--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.0",
     "pouchdb": "^7.2.2",
     "sequelize": "^6.3.4"
+  },
+  "devDependencies": {
+    "bluebird": "^3.7.2"
   }
 }
